--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -609,3 +609,14 @@
     url = {https://github.com/sifive/RiscvSpecFormal},
     urldate = {2020-01-08},
 }
+
+@InProceedings{GoguenMeseguer82,
+    author = {J. A. {Goguen} and J. {Meseguer}},
+    booktitle = {1982 IEEE Symposium on Security and Privacy},
+    title = {Security Policies and Security Models},
+    year = {1982},
+    pages = {11-20},
+    doi = {10.1109/SP.1982.10014},
+    ISSN = {1540-7993},
+    month = {April},
+}
